<resources>



    <string name="mr_potato_head">Mr. Potato Head</string>
    <string name="click_his_parts_to_add_remove_them">Click his parts to add/remove them!</string>
    <string name="hat">Hat</string>
    <string name="eyes">Eyes</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="glasses">Glasses</string>
    <string name="nose">Nose</string>
    <string name="mouth">Mouth</string>
    <string name="mustache">Mustache</string>
    <string name="ears">Ears</string>
    <string name="arms">Arms</string>
    <string name="shoes">Shoes</string>

</resources>